set custom color for tailwind css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+              "c-primary": "#FF1F3D",
+            },
+          },
+        },
+      };
+    </script>
   </head>
   <body></body>
 </html>
