--- a/index.html
+++ b/index.html
@@ -23,5 +23,23 @@
       };
     </script>
   </head>
-  <body></body>
+  <body>
+    <header class="container mx-auto">
+      <nav class="flex flex-col lg:flex-row justify-between my-12">
+        <div class="mx-auto lg:mx-0 mb-5 lg:mb-0">
+          <img src="images/Logo.png" alt="" />
+        </div>
+        <div
+          class="mx-auto lg:mx-0 mb-5 lg:mb-0 bg-gray-200 rounded px-5 py-2 cursor-pointer w-36"
+        >
+          <h5 class="text-lg text-black">Sort by view</h5>
+        </div>
+        <div
+          class="mx-auto lg:mx-0 mb-5 lg:mb-0 px-5 py-2 bg-c-primary rounded w-20"
+        >
+          <a href="" class="text-lg text-white">Blog</a>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
