--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@
         </div>
       </nav>
     </header>
+    <main class="container mx-auto">
+      <hr />
+      <div id="categories"></div>
+    </main>
+    <script src="scripts.js"></script>
   </body>
 </html>
