show all items in main section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
     <main class="container mx-auto">
       <hr />
       <div id="categories"></div>
+      <div id="courses"></div>
     </main>
     <script src="scripts.js"></script>
+    <script
+      src="https://kit.fontawesome.com/a044e4ebee.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
