sort items by views

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <img src="images/Logo.png" alt="" />
         </div>
         <div
+          id="sort-by-views"
           class="mx-auto lg:mx-0 mb-5 lg:mb-0 bg-gray-200 rounded px-5 py-2 cursor-pointer w-36"
         >
           <h5 class="text-lg text-black">Sort by view</h5>
