add blog section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div
           class="mx-auto lg:mx-0 mb-5 lg:mb-0 px-5 py-2 bg-c-primary rounded w-20"
         >
-          <a href="" class="text-lg text-white">Blog</a>
+          <a href="./qna.html" class="text-lg text-white">Blog</a>
         </div>
       </nav>
     </header>
